# CyclopsStudio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt
App/src/: EditorLayer.cpp  EditorLayer.h  main.cpp
App/src/Panels/: LayerPanel.cpp  LayerPanel.h  TimelinePanel.cpp  TimelinePanel.h  ViewportPanel.cpp  ViewportPanel.h
Engine/: CMakeLists.txt
Engine/assets/brushes/: StandardSoft.cbrush
Engine/assets/shaders/: Brush.shader  Texture.glsl
Engine/src/: BrushEngine.cpp  BrushEngine.h  Canvas.cpp  Canvas.h  Engine.cpp  Engine.h  Framebuffer.cpp  Framebuffer.h  Layer.h  OpenGLDebug.cpp  OpenGLDebug.h  Shader.cpp  Shader.h
Engine/src/Cyclops/Core/: Base.h  Command.h  CommandHistory.cpp  CommandHistory.h  Engine.cpp  Engine.h  KeyFrame.h  Layer.h  PlatformDetection.h
Engine/src/Cyclops/Core/Profiling/: Instrumentor.h
Engine/src/Cyclops/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Cyclops/Platform/OpenGL/: OpenGLDebug.cpp  OpenGLDebug.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h
Engine/src/Cyclops/Platform/Windows/: WindowsPlatformUtils.cpp
Engine/src/Cyclops/Renderer/: Framebuffer.cpp  Framebuffer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/src/Cyclops/Scene/: Canvas.cpp  Canvas.h  CanvasLayer.cpp  CanvasLayer.h
Engine/src/Cyclops/Tools/: Brush.h  BrushEngine.cpp  BrushEngine.h  BrushSerializer.h  BrushTool.cpp  BrushTool.h  LayerCommands.cpp  LayerCommands.h  PaintCommand.cpp  PaintCommand.h  Tool.h
Engine/src/Cyclops/UI/: Theme.h
Engine/src/Cyclops/Utils/: PlatformUtils.h
Engine/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Tests/: CMakeLists.txt
Tests/src/: Test_BrushMath.cpp
